# rust-axum-htmx-tailwind

./: Cargo.toml  README.md  bacon.toml  package-lock.json  package.json
src/: main.rs
ui/assets/: tailwind.css
