[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
lazy_static = "1.5.0"
serde_json = "1.0.149"
tera = "1.20.1"
tokio = { version = "1.49", features = ["full"] }
tower-livereload = "0.10.2"
